src/components/open-api-page/partials/operation-object/style.module.css
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

.root {
	--header-text-color: var(--gray-3);

	margin: 0;
	position: relative;

	&:not(:last-child) {
		margin-bottom: 25px;
	}
}

.meta {
	display: block;
	width: 100%;
}

.endpoint {
	display: block;
	line-break: normal;

	& .method {
		color: var(--header-text-color);
		background: none;
		border: none;
		padding-left: 0;
		padding-right: 0;
		margin-right: 8px;
	}

	& .path {
		color: var(--gray-2);
		word-break: break-all;
	}
}

.spacer {
	display: block;
	height: 12px;
}

.columnSectionHeading {
	composes: hds-typography-display-100 from global;
	font-weight: var(--token-typography-font-weight-bold);
	margin: 0 0 8px 0;
	padding-bottom: 8px;
	color: var(--gray-3);

	&:nth-child(2) {
		margin-top: 0;
	}
}

.summary {
	/* Base typography */
	composes: g-type-body from global;

	/* Remove the top margin from any first item */
	& > *:first-child {
		margin-top: 0;
	}
	& > *:last-child {
		margin-bottom: 0;
	}

	margin: 8px 0 24px 0;
}

